--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-asgiref==3.2.10
-attrs==19.3.0
-autobahn==20.7.1
-Automat==20.2.0
-cffi==1.14.1
+-i https://pypi.org/simple
+asgiref==3.3.0; python_version >= '3.5'
+attrs==20.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+autobahn==20.7.1; python_version >= '3.5'
+automat==20.2.0
+cffi==1.14.3
 channels==2.4.0
 constantly==15.1.0
-cryptography==3.0
+cryptography==3.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 daphne==2.5.0
-Django==2.2.15
+django==2.2.16
 hyperlink==20.0.1
-idna==2.10
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 incremental==17.5.0
-pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-PyHamcrest==2.0.2
-pyOpenSSL==19.1.0
+pyasn1==0.4.8
+pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyhamcrest==2.0.2; python_version >= '3.5'
+pyopenssl==19.1.0
 pytz==2020.1
 service-identity==18.1.0
-six==1.15.0
-sqlparse==0.3.1
-Twisted==20.3.0
-txaio==20.4.1
-zope.interface==5.1.0
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlparse==0.4.1; python_version >= '3.5'
+twisted[tls]==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+txaio==20.4.1; python_version >= '3.5'
+zope.interface==5.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
